2003-07-02  Alexander Malysh  <a.malysh@centrium.de>
    * gw/dlr.c: fixed debug message if dlr_url was not set.
      gw/dlr_mysql.c: fixed a bug in missing '%s' for select statement.
      Thanks to John.Vandenberg@callista.com.au for pointing this.
      gw/dlr_sdb.c: fixed varios bugs introduced by me while rewriting of DLR code.
      Added workaround for Oracle (oracle doesn't like LIMIT 1).
      Thanks to John.Vandenberg@callista.com.au.
      doc/examples/dlr-[mysql|sdb].conf: added missing boxc field
      And again thanks to John.Vandenberg@callista.com.au.

2003-07-02  Alexander Malysh  <a.malysh@centrium.de>
    * configure.in,configure: added ability to biuld in more as one DLR storage type.
      Just call: ./configure --enable-mysql --enable-sdb --with-dlr="mysql sdb"
      in this case we have mysql and sdb support build in.

2003-07-02  Stipe Tolj  <tolj@wapme-systems.de>
    * wmscript/wsstdlib.c: added support for EFI inside WMLScript. 
      Thanks to "Guido Meyer" <guido.meyer@robot.de> for this patch.

2003-06-30  Bruno Rodrigues  <bruno.rodrigues@litux.org>
    * userguide.xml: added missing already implemented tags for XML Post - 
      vp/delay and timing/delay

2003-06-27  Stipe Tolj  <tolj@wapme-systems.de>
    * gw/wap-appl.c: enhanced the 'access-log' logging of wapbox group to have
      more information stored to the log entries.

2003-06-25  Alexander Malysh  <a.malysh@centrium.de>
    * gwlib/conn.c: fixed not critical memory leak.

2003-06-24  Stipe Tolj  <tolj@wapme-systems.de>
    * radius/radius_acct.c: fixing mutex_lock() PANIC inside 
      radius_acct_get_msisdn() when gw/wap-appl.c is calling the function
      without having the proxy thread running. This broke wapbox.

2003-06-24  Stipe Tolj  <tolj@wapme-systems.de>
    * gw/wap-appl.c: removing HTTP referer inclusion by Kannel again. This has
      caused WAP certification tests to fail in the REFPOOL. There is a magic