@@ -121,20 +121,25 @@ test/fakewap
 test/test_cfg
 test/test_cimd2
 test/test_counter
+test/test_dbpool
 test/test_dict
 test/test_headers
 test/test_http
 test/test_http_server
 test/test_list
+test/test_md5
 test/test_mem
 test/test_mime
 test/test_msg
+test/test_octstr_dump
 test/test_octstr_format
 test/test_octstr_immutables
 test/test_ota
 test/test_pap
 test/test_pdu
 test/test_ppg
+test/test_radius_acct
+test/test_radius_pdu
 test/test_si
 test/test_sl
 test/test_smsc
@@ -149,6 +154,7 @@ test/udpfeed
 test/wapbox_feeder
 test/wapproxy
 test/wml_tester
+utils/mtbatch
 utils/run_kannel_box
 utils/seewbmp
 utils/start-stop-daemon
