@@ -1,5 +1,4 @@
 AUTHORS
 README
 NEWS
-TODO
 VERSION
